@startuml
title GoF — Builder
' ЛР6 — GoF UML
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam ArrowThickness 1
skinparam RoundCorner 12
skinparam defaultTextAlignment center
hide empty members
left to right direction

class OrderBuilder {
  +add_item(sku, qty, unitPoints)
  +build()
}

class Order
class OrderItem
class CreateOrderCommand

CreateOrderCommand --> OrderBuilder : uses
OrderBuilder --> Order : builds
OrderBuilder --> OrderItem : adds
Order "1" o-- "*" OrderItem
@enduml
